# aura

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  main.py  requirements.txt  setup.py
.github/workflows/: codeql.yml  complexity.yml  pr-conventional-commits.yml  pylint.yml  python-app.yml
app/: main.py
app/database/: db.py  models.py  session.py
app/discord/: bot.py
app/repositories/: activity_repository.py  answer_repository.py  course_repository.py  question_repository.py  study_session_repository.py  user_repository.py
app/schemas/: activity.py  answer.py  course.py  question.py  study_session.py  user.py
app/server/: bot.py
app/utils/: cmdline.py  parser.py
app/wikipediaAPI/: scraper.py
app/wikipedia_api/: scraper.py
aura/: __main__.py
aura/database/: models.py  session.py
aura/repositories/: activity_repository.py  answer_repository.py  discord_user_repository.py  question_repository.py  study_session_repository.py  user_repository.py
aura/schemas/: activity.py  ai.py  (+5 more)
discord/: Cargo.toml
discord/src/: main.rs  types.rs
discord/src/cli/: mod.rs
discord/src/commands/: ai.rs  auth.rs  help.rs  llm.rs  mod.rs  ping.rs
discord/src/config/: mod.rs  settings.rs
discord/src/events/: connection.rs  error.rs  message.rs  mod.rs  ready.rs
discord/src/services/: api_client.rs  mod.rs  registration.rs
discord/src/utils/: mod.rs
docs/: mkdocs.yml  project-structure.md  project_structure.md  requirements.txt
scripts/: check_rust.sh  database_setup.py  run_black.sh  run_pylint.sh
(+89 files in other folders)
