[package]
name = "aura-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
poise = "0.6.1"
tracing = "0.1.40"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.89"
once_cell = "1.20.1"
serde = "1.0.210"
serde_json = "1.0.128"
